tests/invalid/import_from_inside_for/main.py
def main() -> None:
    for i in range(1):
        from imports import module_a
